--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: swift
 osx_image: xcode14
 xcode_project: SportsApps.xcodeproj 
 xcode_scheme: SportsApps
-xcode_destination: platform=iOS Simulator,OS=16.0,name=iPhone 14 Pro
+xcode_destination: platform=iOS Simulator,OS=11.4,name=iPhone X
